# Calypso

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  vk_layer_settings.txt
shaders/src/: triangle.vert
src/: hello_triangle.cpp  hello_triangle.h  main.cpp  thirdparty.cpp  vertex.cpp  vertex.h
src/rendering/: engine.cpp  engine.h  initialisers.cpp  initialisers.h
src/rendering/type/: misc.h  vertex.cpp  vertex.h
src/util/: error.cpp  error.h  file.cpp  file.h  vulkan.cpp  vulkan.h
